fix layout issue

--- a/src/App.css
+++ b/src/App.css
@@ -64,7 +64,7 @@ html, body {
 
 .card-container {
   width: 90%; 
-  width: 900px; 
+  width: 1000px; 
   background: white;
   padding: 40px;
   border-radius: 12px;
